<resources>
    <string name="app_name">师妹师兄</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="see_name1">找朋友</string>
    <string name="see_name2">找朋友</string>
    <string name="see_name3">找朋友</string>
    <string name="see_name4">找朋友</string>
    <string name="see_name5">找朋友</string>
    <string name="see_name6">找朋友</string>
    <string name="see_name7">找朋友</string>
    <string name="see_name8">找朋友</string>
    <string name="see_name9">找朋友</string>
    <string name="it_il_personal_name">萌萌</string>
    <string name="it_il_personal_gender">女</string>
    <string name="it_il_personal_age">19岁</string>
    <string name="it_il_personal_location">河南新乡</string>
    <string name="it_il_personal_addfriends">添加好友</string>
    <string name="it_il_personal_circlefriends">朋友圈</string>
    <string name="it_il_personal_appointment">约会记录</string>
    <string name="it_il_personal_setting">设置</string>
    <string name="it_il_personal_help">帮助</string>
    <string name="it_il_photoalbum_name">萌萌</string>
    <string name="it_il_photoalbum_signature">我喜欢石头的懂事 kimi的害羞可爱 森蝶的细心照顾他人 天天的独当一面 诗龄的天马行空 童年真好！</string>
    <string name="it_il_foufri_name">萌萌</string>
    <string name="it_il_foufri_age">19岁</string>
    <string name="it_il_foufri_constellation">天蝎座</string>
    <string name="it_il_foufri_school">同校</string>
    <string name="it_il_foufri_department">软件学院</string>
    <string name="it_il_foufri_location">河南新乡</string>
    <string name="it_il_appointment_theme">约人逛街</string>
    <string name="it_il_appointment_matchobject">对象</string>
    <string name="it_il_appointment_object">仅限女生</string>
    <string name="it_il_appointment_matchlocation">地点</string>
    <string name="it_il_appointment_location">商业街</string>
    <string name="it_il_appointment_matchexplain">说明</string>
    <string name="it_il_appointment_explain">想要去逛街，找个拎包的跟班</string>
    <string name="it_il_appointment_comment">10条评论</string>
    <string name="it_il_appointment_apply">5人报名</string>
    <string name="it_il_appointment_otherinfo_commentlist_name">萌萌</string>
    <string name="it_il_appointment_otherinfo_commentlist_comment">速来围观</string>
    <string name="it_il_appointment_otherinfo_commentlist_commenttime">1小时前</string>
    <string name="it_il_appointment_newappointment_matchtheme">约会主题</string>
    <string name="it_il_appointment_newappointment_matchdate">时间</string>
    <string name="it_il_appointment_newappointment_date">2015年12月25日</string>
    <string name="it_il_appointment_newappointment_matchlocation">地点</string>
    <string name="it_il_appointment_newappointment_location">商业街</string>
    <string name="it_il_appointment_newappointment_matchobject">对象</string>
    <string name="it_il_appointment_newappointment_object">仅限女生</string>
    <string name="it_il_appointment_newappointment_matchtype">类型</string>
    <string name="it_il_appointment_newappointment_type">我买单</string>
    <string name="it_il_appointment_newappointment_matchexplain">约会说明</string>
    <string name="it_il_appointment_newappointment_explain">来个拎包的</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="it_settingafterregister_sethead">设置头像</string>
    <string name="it_settingafterregister_setinfo">为了让更多的小伙伴认识你，请先稍微完善一下你的个人信息哦。</string>
    <string name="it_settingafterregister_setname">昵称</string>
    <string name="it_settingafterregister_name">输入昵称</string>
    <string name="it_settingafterregister_setsex">性别</string>
    <string name="it_settingafterregister_sex">男</string>
    <string name="it_settingafterregister_setbirthday">生日</string>
    <string name="it_settingafterregister_birthday">1996-10-30</string>
    <string name="it_settingafterregister_setheight">身高</string>
    <string name="it_settingafterregister_height">160cm</string>
    <string name="it_settingafterregister_sethome">家乡</string>
    <string name="it_settingafterregister_home">河南 新乡</string>
    <string name="it_settingafterregister_setschool">学校名称</string>
    <string name="it_settingafterregister_school">河南师范大学</string>
    <string name="it_settingafterregister_setemotion">恋爱状态</string>
    <string name="it_settingafterregister_emotion">单身</string>
    <string name="it_settingafterregister_ok">完成</string>
    <string name="it_wheel_setbirthday">设置生日</string>
    <string name="it_wheel_setbirthdayok">确定</string>
    <string name="it_singlechoicesetsex_title">设置性别</string>
    <string name="it_singlechoicesetsex_boy">男</string>
    <string name="it_singlechoicesetsex_girl">女</string>
    <string name="it_singlechoicesethead_title">设置头像</string>
    <string name="it_singlechoicesethead_first">选择本地图片</string>
    <string name="it_singlechoicesethead_second">拍照</string>
<string name="it_showbighead_singlechoice_sethead_sethead">设置头像</string>
    <string name="it_showbighead_singlechoice_sethead_close">取消</string>
    <string name="it_singlechoice_newappointment_settheme_title">选择约会主题</string>
    <string name="it_singlechoice_newappointment_settheme_1">上自习</string>
    <string name="it_singlechoice_newappointment_settheme_2">吃饭</string>
    <string name="it_singlechoice_newappointment_settheme_3">看电影</string>
    <string name="it_singlechoice_newappointment_settheme_4">逛街</string>
    <string name="it_singlechoice_newappointment_settheme_5">散步</string>
    <string name="it_singlechoice_newappointment_settheme_6">唱歌</string>
    <string name="it_singlechoice_newappointment_settheme_7">旅行</string>
    <string name="it_singlechoice_newappointment_settheme_8">运动</string>
    <string name="it_recommend_choose_like_friends_name">周杰伦</string>
    <string name="it_recommend_choose_like_friends_matchage">年龄</string>
    <string name="it_recommend_choose_like_friends_age">21岁</string>
    <string name="it_recommend_choose_like_friends_matchheight">身高</string>
    <string name="it_recommend_choose_like_friends_height">173cm</string>
    <string name="it_recommend_choose_like_friends_matchschool">学校</string>
    <string name="it_recommend_choose_like_friends_school">河南师范大学</string>
    <string name="it_recommend_choose_like_friends_message">给TA留言</string>
    <string name="it_setfriendscondition_matchfirstcondition">交友条件一</string>
    <string name="it_setfriendscondition_firstcondition">选择条件范围</string>
    <string name="it_setfriendscondition_matchsecondcondition">交友条件二</string>
    <string name="it_setfriendscondition_matchthirdcondition">交友条件三</string>
    <string name="it_setfriendscondition_matchfourthcondition">交友条件四</string>
    <string name="it_likefriends_list_item_name">周杰伦</string>
    <string name="it_likefriends_list_item_matchaddtime">添加</string>
    <string name="it_likefriends_list_item_addtime">2016年1月1日</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在加载数据</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_not_found">找不到这个群组</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="join_need_owner_approval">加入公开群需要群主同意</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
</resources>