<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="fill_parent"    android:layout_height="match_parent"    android:orientation="vertical"     >                <include            android:id="@+id/il_otherpersoninfo_titlebar"            android:layout_width="match_parent"            android:layout_height="wrap_content"            layout="@layout/il_title" />        <ScrollView        android:layout_width="match_parent"        android:layout_height="match_parent" >        <RelativeLayout            android:layout_width="match_parent"            android:layout_height="match_parent" >            <RelativeLayout                android:layout_width="300dp"                android:layout_height="500dp"                android:layout_centerHorizontal="true" >                <TextView                    android:id="@+id/it_recommend_choose_like_friends_name"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_centerHorizontal="true"                    android:layout_marginTop="10dp"                    android:text="@string/it_recommend_choose_like_friends_name"                    android:textColor="@color/it_normal_textcolor"                    android:textSize="20sp" />                <com.hsd.fsxasm.widget.lorentzos.flingswipe.SwipeFlingAdapterView                    android:id="@+id/il_recommend_choose_like_friends_photo"                    android:layout_width="300dp"                    android:layout_height="300dp"                    android:layout_below="@id/it_recommend_choose_like_friends_name"                    android:layout_marginTop="10dp"                    android:src="@drawable/jay"                     android:clickable="true"/>                <TextView                    android:id="@+id/it_recommend_choose_like_friends_matchage"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_below="@id/il_recommend_choose_like_friends_photo"                    android:layout_marginLeft="20dp"                    android:layout_marginTop="10dp"                    android:text="@string/it_recommend_choose_like_friends_matchage"                    android:textColor="@color/it_match_textcolor"                    android:textSize="@dimen/it_recommend_choose_like_friends_match" />                <TextView                    android:id="@+id/it_recommend_choose_like_friends_age"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_alignTop="@id/it_recommend_choose_like_friends_matchage"                    android:layout_marginLeft="20dp"                    android:layout_toRightOf="@id/it_recommend_choose_like_friends_matchage"                    android:text="@string/it_recommend_choose_like_friends_age"                    android:textColor="@color/it_normal_textcolor"                    android:textSize="@dimen/it_recommend_choose_like_friends_match" />                <TextView                    android:id="@+id/it_recommend_choose_like_friends_matchheight"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_alignLeft="@id/it_recommend_choose_like_friends_matchage"                    android:layout_below="@id/it_recommend_choose_like_friends_matchage"                    android:layout_marginTop="5dp"                    android:text="@string/it_recommend_choose_like_friends_matchheight"                    android:textColor="@color/it_match_textcolor"                    android:textSize="@dimen/it_recommend_choose_like_friends_match" />                <TextView                    android:id="@+id/it_recommend_choose_like_friends_height"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_alignTop="@id/it_recommend_choose_like_friends_matchheight"                    android:layout_marginLeft="20dp"                    android:layout_toRightOf="@id/it_recommend_choose_like_friends_matchheight"                    android:text="@string/it_recommend_choose_like_friends_height"                    android:textColor="@color/it_normal_textcolor"                    android:textSize="@dimen/it_recommend_choose_like_friends_match" />                <TextView                    android:id="@+id/it_recommend_choose_like_friends_matchschool"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_alignLeft="@id/it_recommend_choose_like_friends_matchage"                    android:layout_below="@id/it_recommend_choose_like_friends_matchheight"                    android:layout_marginTop="5dp"                    android:text="@string/it_recommend_choose_like_friends_matchschool"                    android:textColor="@color/it_match_textcolor"                    android:textSize="@dimen/it_recommend_choose_like_friends_match" />                <TextView                    android:id="@+id/it_recommend_choose_like_friends_school"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_alignTop="@id/it_recommend_choose_like_friends_matchschool"                    android:layout_marginLeft="20dp"                    android:layout_toRightOf="@id/it_recommend_choose_like_friends_matchschool"                    android:text="@string/it_recommend_choose_like_friends_school"                    android:textColor="@color/it_normal_textcolor"                    android:textSize="@dimen/it_recommend_choose_like_friends_match" />                <ImageView                    android:id="@+id/il_recommend_choose_like_friends_dislike"                    android:layout_width="60dp"                    android:layout_height="60dp"                    android:layout_alignParentBottom="true"                    android:layout_alignParentLeft="true"                    android:layout_marginLeft="10dp"                    android:src="@drawable/ic_choosefriends_dislike"                    android:clickable="true" />                <ImageView                    android:id="@+id/il_recommend_choose_like_friends_like"                    android:layout_width="60dp"                    android:layout_height="60dp"                    android:layout_alignParentBottom="true"                    android:layout_alignParentRight="true"                    android:layout_marginRight="10dp"                    android:src="@drawable/ic_choosefriends_like"                    android:clickable="true" />                <RelativeLayout                    android:id="@+id/il_recommend_choose_like_friends_message"                    android:layout_width="70dp"                    android:layout_height="30dp"                    android:layout_alignParentBottom="true"                    android:layout_centerHorizontal="true"                    android:background="@drawable/button_style_bule"                    android:clickable="true" >                    <TextView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_centerInParent="true"                        android:text="@string/it_recommend_choose_like_friends_message"                        android:textColor="@color/it_normal_textcolor"                        android:textSize="15sp" />                </RelativeLayout>            </RelativeLayout>        </RelativeLayout>    </ScrollView></LinearLayout>