<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="300dp"    android:layout_height="wrap_content"    android:orientation="vertical"    android:background="#ffffff" >    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="50dp"        android:gravity="center"        android:orientation="vertical"        android:background="@color/title_green" >        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/it_singlechoicesetsex_title"            android:textColor="@color/it_match_textcolor" />    </LinearLayout>    <View        android:layout_width="fill_parent"        android:layout_height="0.1dp"        android:background="@color/view_notfill" />    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="fill_parent"        android:orientation="vertical" >        <LinearLayout            android:id="@+id/il_singlechoice_boy"            android:layout_width="fill_parent"            android:layout_height="50dp"            android:gravity="center"            android:orientation="horizontal"            android:background="@drawable/layoutclick_style"            android:clickable="true" >            <ImageView                 android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:src="@drawable/user_data_gender_male"                />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/it_singlechoicesetsex_boy"                android:textColor="@color/it_normal_textcolor"                android:textSize="20sp" />        </LinearLayout>        <View            android:layout_width="fill_parent"            android:layout_height="0.1dp"            android:background="@color/view_notfill" />        <LinearLayout            android:id="@+id/il_singlechoice_girl"            android:layout_width="fill_parent"            android:layout_height="50dp"            android:gravity="center"            android:orientation="horizontal"            android:background="@drawable/layoutclick_style"            android:clickable="true" >            <ImageView                 android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:src="@drawable/user_data_gender_female"                />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/it_singlechoicesetsex_girl"                android:textColor="@color/it_normal_textcolor"                android:textSize="20sp" />        </LinearLayout>        <View            android:layout_width="fill_parent"            android:layout_height="0.1dp"            android:background="@color/view_notfill" />    </LinearLayout></LinearLayout>