<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="wrap_content"    android:layout_height="wrap_content"    android:cacheColorHint="#ff0000"    android:focusable="false"    android:focusableInTouchMode="false"    android:listSelector="#22000000" >    <com.hsd.fsxasm.widget.CircleImageView        android:id="@+id/id_foufri_head"        android:layout_width="70dp"        android:layout_height="70dp"        android:layout_centerVertical="true"        android:layout_marginLeft="8dp"        android:layout_marginTop="8dp"        android:src="@drawable/head1"        app:border_color="@color/circleview_white" />    <RelativeLayout        android:id="@+id/id_foufri_middle"        android:layout_width="fill_parent"        android:layout_height="70dp"        android:layout_alignTop="@id/id_foufri_head"        android:layout_toRightOf="@id/id_foufri_head" >        <TextView            android:id="@+id/id_foufri_name"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginLeft="10dp"            android:layout_marginTop="0dp"            android:text="@string/it_il_foufri_name"            android:textSize="@dimen/it_il_foufri_name" />                <!-- <ImageView            android:id="@+id/id_foufri_gender"            android:layout_width="20dp"            android:layout_height="20dp"            android:layout_alignLeft="@id/id_foufri_name"            android:layout_below="@id/id_foufri_name"            android:layout_marginTop="3dp"            android:src="@drawable/user_data_gender_female" /> --><TextView            android:id="@+id/id_foufri_sex"            android:layout_width="wrap_content"            android:layout_height="wrap_content"           android:layout_alignLeft="@id/id_foufri_name"            android:layout_below="@id/id_foufri_name"            android:layout_marginTop="10dp"            android:text="女"            android:textSize="@dimen/it_il_foufri_age" />        <TextView            android:id="@+id/id_foufri_age"            android:layout_width="wrap_content"            android:layout_height="wrap_content"           android:layout_alignTop="@id/id_foufri_sex"            android:layout_toRightOf="@id/id_foufri_sex"            android:layout_marginLeft="10dp"            android:text="@string/it_il_foufri_age"            android:textSize="@dimen/it_il_foufri_age" />        <TextView            android:id="@+id/id_foufri_constellation"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_alignTop="@id/id_foufri_sex"            android:layout_toRightOf="@id/id_foufri_age"            android:layout_marginLeft="10dp"            android:text="@string/it_il_foufri_constellation"            android:textSize="@dimen/it_il_foufri_age" />       <!--  <TextView            android:id="@+id/id_foufri_school"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/id_foufri_sex"            android:layout_alignLeft="@id/id_foufri_sex"            android:layout_marginTop="3dp"            android:text="河南师范大学"            android:textSize="@dimen/it_il_foufri_school"            android:textColor="@color/it_match_textcolor" /> -->        <!-- <TextView            android:id="@+id/id_foufri_department"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_alignTop="@id/id_foufri_school"            android:layout_toRightOf="@id/id_foufri_school"            android:layout_marginLeft="5dp"            android:text="@string/it_il_foufri_department"            android:textSize="@dimen/it_il_foufri_school"            android:textColor="@color/it_match_textcolor" /> -->        <TextView            android:id="@+id/id_foufri_school"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_alignParentRight="true"            android:layout_centerVertical="true"            android:layout_marginRight="10dp"            android:text="河南师范大学"            android:textSize="@dimen/it_il_foufri_age" />    </RelativeLayout></RelativeLayout>